--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,26 @@
 version: '3.9'
 
 services:
-  postgres:
-    image: postgres:14-alpine
+  # using in mem h2 for now
+#  postgres:
+#    image: postgres:14-alpine
+#    ports:
+#      - "55432:5432"
+#    volumes:
+#      - ./docker/volumes/postgres:/var/lib/postgresql/data
+#    environment:
+#      - POSTGRES_PASSWORD=password
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_DB=app
+
+  localstack:
+    image: localstack/localstack:latest
     ports:
-      - "55432:5432"
+      - "4566:4566"
+      - "4510-4559:4510-4559"
     volumes:
-      - ./docker/volumes/postgres:/var/lib/postgresql/data
+      - ./docker/volumes/localstack:/var/lib/localstack
     environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=app
+      - SERVICES=s3,iam,ec2,cloudwatch
+      - AWS_ACCESS_KEY_ID="local"
+      - AWS_SEcRET_ACCESS_KEY="local"
